<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FAFDFD"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:background="#F7FAFA"
            android:layout_marginTop="150dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:text="mentor"
                android:textColor="#2196F3"
                android:textSize="50dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="me"
                android:textColor="#DCF110"
                android:textSize="50dp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="#1EBBD3"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:text="Login"
                android:textColor="#FFFFFF"
                android:textSize="40sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:layout_marginStart="20dp"
                android:text="Email"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="350dp"
                android:background="#FFFFFF"
                android:layout_height="30dp"
                android:hint="Enter Email"
                android:inputType="textEmailAddress"
                android:layout_marginTop="135dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="16dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="180dp"
                android:layout_marginStart="20dp"
                android:text="Password"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="350dp"
                android:layout_height="30dp"
                android:hint="Enter your password"
                android:background="#FFFFFF"
                android:inputType="textPassword"
                android:layout_below="@id/editTextEmail"
                android:layout_marginTop="48dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="16dp"/>

            <TextView
                android:id="@+id/textViewForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="Forgot Your Password?"
                android:layout_below="@id/editTextPassword"
                android:layout_marginTop="8dp"
                android:layout_marginStart="200dp"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:clickable="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:background="#1EBBD3"
            android:orientation="horizontal">

            <Button
                android:id="@+id/LoginBtn"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="Login"
                android:textColor="#1EBBD3"
                android:backgroundTint="#FFFFFF"
                android:layout_marginTop="0dp"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="16dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="130dp"
                android:layout_marginStart="90dp"
                android:text="Don’t have an account?"
                android:textSize="16sp"
                android:textColor="#FFFFFF"/>


            <TextView
                android:id="@+id/textViewSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sign Up"
                android:layout_marginTop="129dp"
                android:layout_marginStart="260dp"
                android:textSize="17sp"
                android:textStyle="bold"
                android:textColor="#2196F3"
                android:clickable="true"/>

        </RelativeLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
